# Prediction-model

./: Model_Input_Schema.txt  README.md  application.py  deploy.py  lb_env_file.yml  pyproject.toml  run_pipeline.py  setup.cfg
.zen/: config.yaml
analysis/: Exploratory_Data_Analysis.ipynb
analysis/analysis_components/: basic_data_inspection.py  bivariate_analysis.py  missing_value_analysis.py  univariate_analysis.py
lb_env/conda-meta/: bzip2-1.0.8-h2bbff1b_6.json  ca-certificates-2024.9.24-haa95532_0.json  history  libffi-3.4.4-hd77b12b_1.json  openssl-3.0.15-h827c3e9_0.json  pip-24.2-py311haa95532_0.json  python-3.11.10-h4607a30_0.json  setuptools-75.1.0-py311haa95532_0.json  sqlite-3.45.3-h2bbff1b_0.json  tk-8.6.14-h0416ee5_0.json  tzdata-2024b-h04d1e81_0.json  vc-14.40-h2eaa2aa_1.json  vs2015_runtime-14.40.33807-h98bb1dd_1.json  wheel-0.44.0-py311haa95532_0.json  xz-5.4.6-h8cc25b3_1.json  zlib-1.2.13-h8cc25b3_1.json
lb_env/etc/: aau_token
pipelines/: deployment_pipeline.py  train_pipeline.py
src/: exception.py  logger.py
src/Components/: data_ingestion.py  data_splitter.py  feature_engineering.py  handling_missing_values.py  model_building.py
stages/: Handling_missing_values_stages.py  data_importer.py  data_ingestion_stage.py  data_splitting_stage.py  feature_engineering_stage.py  model_building_stage.py  model_loader.py  predictor.py
